Bug 746421 - Make nsTextBoxFrames overflow area include the LOOSE_INK_EXTENTS of the text. r=jfkthame